<?xml version="1.0"?>
<package format="2">
  <name>rallycar</name>
  <version>0.0.1</version>
  <description>Hardware interface for the rallycars</description>
  <maintainer email="yang1510@purdue.edu">Haoguang Yang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>urg_node</depend>
  <depend>hector_mapping</depend>
  <depend>map_server</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>catkin</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
