<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rallycar</name>
  <version>0.0.2</version>
  <description>Hardware interface for the rallycars</description>
  <maintainer email="yang1510@purdue.edu">Haoguang Yang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz2</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>urg_node</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
